# qtgrep

./: .gitignore  CMakeLists.txt  factorization_task.cpp  factorization_task.h  grep_task.cpp  grep_task.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  qt_grep_ui.pro  qt_grep_ui.pro.user.f2fcb74.22  task.cpp  task.h  test_threadpool.cpp  thread_pool.cpp  thread_pool.h
fault_injection/: fault_injection.cpp  fault_injection.hpp
test_dir/: a.txt
